[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "python-utils-toolkit"
version = "1.0.0"
description = "Production-ready Python utilities for trading bots and AI agents — retry, rate limiter, logger, cache, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["utilities", "retry", "rate-limiter", "logger", "trading", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []   # zero runtime dependencies — pure stdlib

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/Ghraven/python-utils-toolkit"
Repository = "https://github.com/Ghraven/python-utils-toolkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
